@@ -1,6 +1,13 @@
 2011-04-05 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/z80/ralloc2.cc:
+	  Avoid assignments where the result overwrites operands in some unary operations.
+	* src/z80/gen.c:
+	  Avoid unnecessary saving of iy in builtin memcpy().
+
+2011-04-05 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/z80/ralloc2.cc:
 	  Avoid assignments where the result overwrites operands in subtraction, addition, bitwise and, xor;
 	  get correct cost for bitwise or.
 	* src/z80/gen.c:
